Add group and group doc swagger
