# docs/swagger.json
@@ -8,6 +8,156 @@
     },
     "basePath": "/",
     "paths": {
+        "/api/group": {
+            "get": {
+                "description": "Get all Group",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Group"
+                ],
+                "summary": "Get all Group",
+                "responses": {
+                    "200": {
+                        "description": "List of all Group"
+                    },
+                    "500": {
+                        "description": "Error"
+                    }
+                }
+            },
+            "post": {
+                "description": "Add Group",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Group"
+                ],
+                "summary": "Add Group",
+                "parameters": [
+                    {
+                        "description": "Group data",
+                        "name": "group",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Radgroupreply"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Group added successfully"
+                    },
+                    "500": {
+                        "description": "Error Group not added successfully"
+                    }
+                }
+            }
+        },
+        "/api/group/{groupname}": {
+            "get": {
+                "description": "Get a specific Group",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Group"
+                ],
+                "summary": "Get a specific Group",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Groupname of the Group",
+                        "name": "groupname",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Data of the Group"
+                    },
+                    "500": {
+                        "description": "Error"
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete Group",
+                "tags": [
+                    "Group"
+                ],
+                "summary": "Delete Group",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Groupname of the group to delete",
+                        "name": "groupname",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Group deleted successfully"
+                    },
+                    "500": {
+                        "description": "Error"
+                    }
+                }
+            },
+            "patch": {
+                "description": "Update a Group",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Group"
+                ],
+                "summary": "Update a Group",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Groupname of the Group to update",
+                        "name": "groupname",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Data to update the Group",
+                        "name": "group",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Radgroupreply"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Group updated successfully"
+                    },
+                    "500": {
+                        "description": "Error"
+                    }
+                }
+            }
+        },
         "/api/nas": {
             "get": {
                 "description": "Get all NAS",
@@ -360,32 +510,32 @@
         "models.Nas": {
             "type": "object",
             "properties": {
-                "community": {
+                "Community": {
                     "type": "string"
                 },
-                "description": {
+                "Description": {
+                    "type": "string"
+                },
+                "Ports": {
+                    "type": "integer"
+                },
+                "Secret": {
+                    "type": "string"
+                },
+                "Server": {
+                    "type": "string"
+                },
+                "Shortname": {
+                    "type": "string"
+                },
+                "Type": {
+                    "type": "string"
+                },
+                "Username": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
-                },
-                "nasname": {
-                    "type": "string"
-                },
-                "ports": {
-                    "type": "integer"
-                },
-                "secret": {
-                    "type": "string"
-                },
-                "server": {
-                    "type": "string"
-                },
-                "shortname": {
-                    "type": "string"
-                },
-                "type": {
-                    "type": "string"
                 }
             }
         },
@@ -394,6 +544,12 @@
             "properties": {
                 "Attribute": {
                     "type": "string"
+                },
+                "Groups": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Radusergroup"
+                    }
                 },
                 "Options": {
                     "type": "array",
@@ -412,6 +568,23 @@
                 }
             }
         },
+        "models.Radgroupreply": {
+            "type": "object",
+            "properties": {
+                "Attribute": {
+                    "type": "string"
+                },
+                "Groupname": {
+                    "type": "string"
+                },
+                "Value": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Radreply": {
             "type": "object",
             "properties": {
@@ -420,6 +593,23 @@
                 },
                 "Value": {
                     "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Radusergroup": {
+            "type": "object",
+            "properties": {
+                "Groupname": {
+                    "type": "string"
+                },
+                "Priority": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
                 }
             }
         }
